# UPS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  debug.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/fs/: fat32.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
