[package]
name = "ups"
version = "0.0.0"
authors = ["Alejandro Machuca Jiménez <alux6mc@gmail.com>"]
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
