[package]
name = "ups"
version = "0.0.0"
authors = ["Alejandro Machuca Jiménez <alux6mc@gmail.com>"]
edition = "2024"

[dependencies]
linked_list_allocator = "0.9.0"
bootloader = {version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false
